--- a/config.yml
+++ b/config.yml
@@ -1,13 +1,9 @@
 language: en
 pipeline:
-  - name: WhitespaceTokenizer
+  - name: ConveRTTokenizer
   - name: RegexFeaturizer
   - name: LexicalSyntacticFeaturizer
-  - name: CountVectorsFeaturizer
-  - name: CountVectorsFeaturizer
-    analyzer: "char_wb"
-    min_ngram: 1
-    max_ngram: 4
+  - name: ConveRTFeaturizer
   - name: DIETClassifier
     epochs: 100
   - name: EntitySynonymMapper
