--- a/credentials.yml
+++ b/credentials.yml
@@ -1,3 +1,4 @@
+version: "2.0"
 # This file contains the credentials for the voice & chat platforms
 # which your bot is using.
 # https://rasa.com/docs/rasa/user-guide/messaging-and-voice-channels/
