--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -1,62 +1,62 @@
 version: "2.0"
+
 stories:
 - story: greet/bye path
   steps:
-  - checkpoint: STORY_START
   - intent: greet
   - action: utter_greet
   - action: utter_help
+  
 - story: say goodbye
   steps:
-  - checkpoint: STORY_START
   - intent: goodbye
   - action: utter_goodbye
+  
 - story: help
   steps:
-  - checkpoint: STORY_START
   - intent: help
   - action: utter_help
+  
 - story: is there a transfer charge
   steps:
-  - checkpoint: STORY_START
   - intent: ask_transfer_charge
   - action: utter_transfer_charge
+  
 - story: Show list of known recipients
   steps:
-  - checkpoint: STORY_START
   - intent: check_recipients
   - action: action_recipients
+  
+- story: Show account balance
+  steps:
+  - intent: check_balance
+  - action: action_account_balance
+  
 - story: Show credit accounts
   steps:
-  - checkpoint: STORY_START
   - intent: check_balance
-    user: |-
-      check_balance{"account_type":"credit"}
     entities:
     - account_type: credit
   - action: action_credit_card_balance
+  
 - story: Show specific credit account
   steps:
-  - checkpoint: STORY_START
   - intent: check_balance
-    user: |-
-      check_balance{"credit_card":"emblem"}
     entities:
     - credit_card: emblem
   - action: action_credit_card_balance
+
 - story: Show credit accounts
   steps:
-  - checkpoint: STORY_START
   - intent: check_balance
-    user: |-
-      check_balance{"account_type":"credit","credit_card":"emblem"}
     entities:
     - account_type: credit
     - credit_card: emblem
   - action: action_credit_card_balance
+  
+  
 - story: from Rasa X 56efe3eaf7c0456db86a6669421f885c
   steps:
-  - checkpoint: STORY_START
   - intent: help
   - action: utter_help
   - intent: greet
@@ -64,9 +64,9 @@ stories:
   - action: utter_help
   - intent: thankyou
   - action: utter_noworries
+  
 - story: from Rasa X 56efe3eaf7c0456db86a6669421f885c (if intent were right)
   steps:
-  - checkpoint: STORY_START
   - intent: help
   - action: utter_help
   - intent: greet
@@ -74,18 +74,19 @@ stories:
   - action: utter_help
   - intent: affirm
   - action: utter_ok
+
 - story: pay credit card and check account balance
   steps:
-  - checkpoint: STORY_START
   - intent: pay_cc
   - action: cc_payment_form
   - active_loop: cc_payment_form
   - active_loop: null
   - intent: check_balance
   - action: action_account_balance
+  
+
 #- story: pay credit card and check account balance inside form
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: pay_cc
 #  - action: cc_payment_form
 #  - active_loop: cc_payment_form
@@ -97,7 +98,6 @@ stories:
 #  - active_loop: null
 #- story: pay cc happy path no greet
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: pay_cc
 #  - action: cc_payment_form
 #  - active_loop: cc_payment_form
@@ -106,7 +106,6 @@ stories:
 #  - action: utter_noworries
 #- story: pay credit card happy path
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: greet
 #  - action: utter_greet
 #  - action: utter_help
@@ -116,21 +115,19 @@ stories:
 #  - active_loop: null
 #- story: pay credit card no greet or thanks
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: pay_cc
 #  - action: cc_payment_form
 #  - active_loop: cc_payment_form
 #  - active_loop: null
 #- story: transfer money
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
 #  - active_loop: null
+#
 #- story: transfer money ask transfer charge
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -141,7 +138,6 @@ stories:
 #  - active_loop: null
 #- story: transfer money ask known recipients
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -152,7 +148,6 @@ stories:
 #  - active_loop: null
 #- story: transfer money ask known recipients and transfer charge
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -167,7 +162,6 @@ stories:
 #  - active_loop: null
 #- story: transfer money ask known recipients and transfer charge
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -182,7 +176,6 @@ stories:
 #  - active_loop: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -195,7 +188,6 @@ stories:
 #    - requested_slot: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -216,7 +208,6 @@ stories:
 #    - requested_slot: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -237,7 +228,6 @@ stories:
 #    - requested_slot: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -258,7 +248,6 @@ stories:
 #    - requested_slot: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -279,7 +268,6 @@ stories:
 #    - requested_slot: null
 #- story: transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -300,7 +288,6 @@ stories:
 #    - requested_slot: null
 #- story: search transactions happy path
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: greet
 #  - action: utter_greet
 #  - action: utter_help
@@ -312,7 +299,6 @@ stories:
 #  - action: utter_noworries
 #- story: search transactions happy path no greet
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: search_transactions
 #  - action: transact_search_form
 #  - active_loop: transact_search_form
@@ -321,33 +307,17 @@ stories:
 #  - action: utter_noworries
 #- story: search transactions happy path no greet or thanks
 #  steps:
-#  - checkpoint: STORY_START
-#  - intent: search_transactions
-#  - checkpoint: GENR_OR_2a7dd
-#- story: search transactions happy path no greet or thanks
-#  steps:
-#  - checkpoint: STORY_START
-#  - intent: check_earnings
-#  - checkpoint: GENR_OR_2a7dd
-#- story: search transactions happy path no greet or thanks
-#  steps:
-#  - checkpoint: GENR_OR_2a7dd
+#  - or:
+#    - intent: search_transactions
+#    - intent: check_earnings
 #  - action: transact_search_form
 #  - active_loop: transact_search_form
 #  - active_loop: null
 #- story: search transactions switch to transfer money
 #  steps:
-#  - checkpoint: STORY_START
-#  - intent: search_transactions
-#  - checkpoint: GENR_OR_503b5
-#- story: search transactions switch to transfer money
-#  steps:
-#  - checkpoint: STORY_START
-#  - intent: check_earnings
-#  - checkpoint: GENR_OR_503b5
-#- story: search transactions switch to transfer money
-#  steps:
-#  - checkpoint: GENR_OR_503b5
+#  - or:
+#    - intent: search_transactions
+#    - intent: check_earnings
 #  - action: transact_search_form
 #  - active_loop: transact_search_form
 #  - intent: transfer_money
@@ -363,17 +333,9 @@ stories:
 #  - active_loop: null
 #- story: search transactions switch to transfer money, deny
 #  steps:
-#  - checkpoint: STORY_START
-#  - intent: search_transactions
-#  - checkpoint: GENR_OR_418ad
-#- story: search transactions switch to transfer money, deny
-#  steps:
-#  - checkpoint: STORY_START
-#  - intent: check_earnings
-#  - checkpoint: GENR_OR_418ad
-#- story: search transactions switch to transfer money, deny
-#  steps:
-#  - checkpoint: GENR_OR_418ad
+#  - or:
+#    - intent: search_transactions
+#    - intent: check_earnings
 #  - action: transact_search_form
 #  - active_loop: transact_search_form
 #  - intent: transfer_money
@@ -384,17 +346,9 @@ stories:
 #  - active_loop: null
 #- story: search transactions switch to transfer money, don't continue transactions
 #  steps:
-#  - checkpoint: STORY_START
-#  - intent: search_transactions
-#  - checkpoint: GENR_OR_1b3ff
-#- story: search transactions switch to transfer money, don't continue transactions
-#  steps:
-#  - checkpoint: STORY_START
-#  - intent: check_earnings
-#  - checkpoint: GENR_OR_1b3ff
-#- story: search transactions switch to transfer money, don't continue transactions
-#  steps:
-#  - checkpoint: GENR_OR_1b3ff
+#  - or:
+#    - intent: search_transactions
+#    - intent: check_earnings
 #  - action: transact_search_form
 #  - active_loop: transact_search_form
 #  - intent: transfer_money
@@ -408,7 +362,6 @@ stories:
 #  - action: utter_ok
 #- story: Transfer money ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -420,7 +373,6 @@ stories:
 #    - requested_slot: null
 #- story: Pay CC ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: pay_cc
 #  - action: cc_payment_form
 #  - active_loop: cc_payment_form
@@ -434,7 +386,6 @@ stories:
 #    - requested_slot: null
 #- story: Pay CC ask account balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: pay_cc
 #  - action: cc_payment_form
 #  - active_loop: cc_payment_form
@@ -448,7 +399,6 @@ stories:
 #    - requested_slot: null
 #- story: Transfer money pay credit card
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -463,7 +413,6 @@ stories:
 #  - active_loop: null
 #- story: Transfer money pay credit card
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: transfer_money
 #  - action: transfer_form
 #  - active_loop: transfer_form
@@ -474,9 +423,12 @@ stories:
 #  - action: utter_ask_back_to_transfer
 #  - intent: deny
 #  - action: utter_ok
+#
+#
+#
+#
 #- story: acknowledge balance
 #  steps:
-#  - checkpoint: STORY_START
 #  - intent: greet
 #  - action: utter_greet
 #  - action: utter_help
@@ -488,3 +440,4 @@ stories:
 #  - action: utter_ok
 #  - intent: transfer_money
 #  - action: transfer_form
+#
