--- a/data/stories/stories.yml
+++ b/data/stories/stories.yml
@@ -75,14 +75,14 @@ stories:
   - intent: affirm
   - action: utter_ok
 
-- story: pay credit card and check account balance
-  steps:
-  - intent: pay_cc
-  - action: cc_payment_form
-  - active_loop: cc_payment_form
-  - active_loop: null
-  - intent: check_balance
-  - action: action_account_balance
+#- story: pay credit card and check account balance
+#  steps:
+#  - intent: pay_cc
+#  - action: cc_payment_form
+#  - active_loop: cc_payment_form
+#  - active_loop: null
+#  - intent: check_balance
+#  - action: action_account_balance
   
 
 #- story: pay credit card and check account balance inside form
