--- a/tests/test_stories.yml
+++ b/tests/test_stories.yml
@@ -60,6 +60,13 @@ stories:
       What are my [credit accounts]{"entity":"account_type","value":"credit"}
     intent: check_balance
   - action: action_credit_card_balance
+  
+- story: check list of known recipients
+  steps:
+  - user: |
+      Show me my list of recipients
+    intent: check_recipients
+  - action: action_recipients
 
 - story: from Rasa X 56efe3eaf7c0456db86a6669421f885c
   steps:
@@ -105,4 +112,15 @@ stories:
     intent: pay_cc
   - action: cc_payment_form
   - active_loop: cc_payment_form
+  - user: |
+      100 dollars
+    intent: inform
+  - action: cc_payment_form
+  - user: |
+      tomorrow
+    intent: inform
+  - user: |
+      yes
+    intent: affirm
   - active_loop: null
+  
