--- a/domain.yml
+++ b/domain.yml
@@ -32,7 +32,6 @@ intents:
 
 entities:
 - amount-of-money
-- payment_amount
 - credit_card
 - payment_date
 - vendor_name
@@ -42,11 +41,17 @@ entities:
 - account_type
 - handoff_to
 slots:
+  account_type:
+    type: categorical
+    values:
+      - credit
   PERSON:
     type: unfeaturized
   account_balance:
     type: unfeaturized
-  amount_of_money:
+  amount-of-money:
+    type: unfeaturized
+  number:
     type: unfeaturized
   amount_transferred:
     type: unfeaturized
@@ -54,7 +59,12 @@ slots:
   confirm:
     type: unfeaturized
   credit_card:
-    type: unfeaturized
+    type: categorical
+    values:
+      - emblem
+      - justice bank
+      - credit all
+      - iron bank
   credit_card_balance:
     type: unfeaturized
   currency:
@@ -66,8 +76,6 @@ slots:
   grain:
     type: unfeaturized
   known_recipients:
-    type: unfeaturized
-  payment_amount:
     type: unfeaturized
   payment_amount_type:
     type: unfeaturized
@@ -102,7 +110,7 @@ responses:
   utter_noworries:
   - text: You're welcome :)
   utter_transfer_complete:
-  - text: Successfully transferred {currency}{amount_of_money} to {PERSON}.
+  - text: Successfully transferred {currency}{amount-of-money} to {PERSON}.
   utter_transfer_charge:
   - text: You are entitled to six transfers within a statement cycle before being
       charged. For subsequent transfers you will be charged {currency}10 per transaction.
@@ -128,7 +136,7 @@ responses:
   utter_no_transactdate:
   - text: Sorry, that's not a recognized time frame.
   utter_cc_pay_scheduled:
-  - text: Payment of {currency}{payment_amount}{payment_amount_type} towards your
+  - text: Payment of {currency}{amount-of-money}{payment_amount_type} towards your
       {credit_card} account scheduled to be paid at {time_formatted}.
   utter_searching_spend_transactions:
   - text: Searching transactions{vendor_name} between {start_time_formatted} and {end_time_formatted}...
@@ -161,7 +169,7 @@ responses:
       title: Yes
     - payload: /deny
       title: No, cancel the transaction
-    text: Would you like to schedule a payment of {currency}{payment_amount}{payment_amount_type}
+    text: Would you like to schedule a payment of {currency}{amount-of-money}{payment_amount_type}
       towards your {credit_card} account for {time_formatted}?
   utter_ask_transfer_form_confirm:
   - buttons:
@@ -169,7 +177,7 @@ responses:
       title: Yes
     - payload: /deny
       title: No, cancel the transaction
-    text: Would you like to transfer {currency}{amount_of_money} to {PERSON}?
+    text: Would you like to transfer {currency}{amount-of-money} to {PERSON}?
   utter_transfer_cancelled:
   - text: Transfer cancelled.
   utter_cc_pay_cancelled:
@@ -184,7 +192,7 @@ responses:
   utter_insufficient_funds:
   - text: Sorry, you don't have enough money to do that!
   utter_credit_card_balance:
-  - text: The current balance for your {credit_card} account is {currency}{amount_of_money}.
+  - text: The current balance for your {credit_card} account is {currency}{amount-of-money}.
   utter_recipients:
   - text: These are your known recpients to whom you can send money:{formatted_recipients}
   utter_greet:
@@ -221,9 +229,7 @@ forms:
     credit_card:
     - type: from_entity
       entity: credit_card
-    payment_amount:
-    - type: from_entity
-      entity: payment_amount
+    amount-of-money:
     - type: from_entity
       entity: amount-of-money
     - type: from_entity
